--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       </div>
     </nav>
     <!-- Navbar -->
-
+    
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">
-          Belanja <span>Gelang</span> <br />
-          dengan <span>murah</span> hanya di sini.
+          Belanja <strong>Gelang</strong> <br>
+          dengan <strong>murah</strong> hanya di sini.
         </h1>
         <a href="" id="btn" class="btn tombol">Order Sekarang</a>
 
