data pelanggan dan barang

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a class="nav-item nav-link" href="#produk">Product</a>
             <a class="nav-link" href="#review">Review</a>
             <a class="tombol btn" id="btn" href="https://wa.link/53sbnu">Contact Us</a>
+           <a class="nav-item nav-link" href="dashboard.php">Admin</a>
           </div>
         </div>
       </div>
